@@ -1,3 +1,8 @@
+2010-11-28  Mike Frysinger  <vapier@gentoo.org>
+
+  * src/bus/ejtag.c (ejtag_bus_init): Punt unused EJALL register lookup.
+    Make sure EJADDRESS and EJDATA registers exist before we use them.
+
 2010-11-19  Mike Frysinger  <vapier@gentoo.org>
 
   * acinclude.m4 (LT_INIT): Fix typo in fallback macro.
